--- a/quickstart/src/components/navigation/navigation.tpl.html
+++ b/quickstart/src/components/navigation/navigation.tpl.html
@@ -3,13 +3,18 @@
     <h1 class="md-toolbar-tools">Angular</h1>
   </md-toolbar>
   <md-content class="md-padding">
-    <md-button ng-click="close()" class="md-primary">
+    <md-button ng-click="close()" hide-gt-md class="md-primary">
       Close
     </md-button>
     <ul class="side-menu">
       <li>
-        <a class="md-button md-default-theme" ng-link="films">
-        Films
+        <a class="md-button md-default-theme" href="./">
+        Suggestion
+        </a>
+      </li>
+      <li>
+        <a class="md-button md-default-theme" href="./films">
+        All Films
         </a>
       </li>
     </ul>
