--- a/quickstart/src/components/films/films.tpl.html
+++ b/quickstart/src/components/films/films.tpl.html
@@ -1,9 +1,10 @@
-<md-list>
-  <md-subheader class="md-no-sticky">All Films</md-subheader>
-  <md-item class="md-3-line" ng-repeat="item in films.items">
-    <div class="md-item-text">
-      <h3>{{ item.name }}</h3>
-
-    </div>
-  </md-item>
-</md-list>
+<md-content style="height: 600px;" flex class="md-padding">
+  <md-list>
+    <md-subheader class="md-no-sticky">All Films</md-subheader>
+    <md-item class="md-3-line" ng-repeat="item in films.items">
+      <div class="md-item-text">
+        <h3>{{ item.name }}</h3>
+      </div>
+    </md-item>
+  </md-list>
+</md-content>
