--- a/quickstart/src/components/navigation/navigation.tpl.html
+++ b/quickstart/src/components/navigation/navigation.tpl.html
@@ -1,12 +1,13 @@
+<link href="./components/navigation/navigation.css" rel="stylesheet" />
 <md-sidenav class="md-sidenav-left md-whiteframe-2" md-is-locked-open="$mdMedia('gt-md')" md-component-id="navigation">
   <md-toolbar class="md-theme-default">
-    <h1 class="md-toolbar-tools">Angular</h1>
+    <h1 class="md-toolbar-tools">Fresh Films</h1>
   </md-toolbar>
   <md-content class="md-padding">
     <md-button ng-click="close()" hide-gt-md class="md-primary">
       Close
     </md-button>
-    <ul class="side-menu">
+    <ul class="docs-menu">
       <li>
         <a class="md-button md-default-theme" href="./">
         Suggestion
